--- a/core/category-service/src/main/resources/application.properties
+++ b/core/category-service/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=category-service
 server.port=8083
 
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
+
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:6545/ewm-categories
