--- a/core/compilation-service/src/main/resources/application.properties
+++ b/core/compilation-service/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=compilation-service
 server.port=8084
 
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
+
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:6546/ewm-compilations
