--- a/core/main-service/src/main/resources/application.properties
+++ b/core/main-service/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=main-service
 server.port=8081
 
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
+
 # Eureka Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
