--- a/core/request-service/src/main/resources/application.properties
+++ b/core/request-service/src/main/resources/application.properties
@@ -1,5 +1,11 @@
+# Spring Application
 spring.application.name=request-service
 server.port=8086
+
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
