--- a/core/user-service/src/main/resources/application.properties
+++ b/core/user-service/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=user-service
 server.port=8082
 
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
+
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:6544/ewm-users
@@ -13,7 +18,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Eureka Client Configuration
+# Eureka Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
