--- a/infra/config-server/src/main/resources/application.properties
+++ b/infra/config-server/src/main/resources/application.properties
@@ -2,6 +2,4 @@ server.port=8888
 spring.application.name=config-server
 spring.profiles.active=native
 spring.cloud.config.server.native.search-locations=classpath:/config
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
-
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
