--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port=8080
 spring.application.name=gateway-server
 
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.enabled=true
+
 # Gateway
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
