--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port=8080
 spring.application.name=gateway-server
 
+spring.main.web-application-type=reactive
+
 # Spring Cloud Config
 spring.config.import=optional:configserver:http://localhost:8888
 spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
 
 # Gateway
 spring.cloud.gateway.discovery.locator.enabled=true
