--- a/core/main-service/src/main/resources/application.properties
+++ b/core/main-service/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
 
 # Database Configuration
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:6543/ewm-main
 spring.datasource.username=postgres
 spring.datasource.password=root
@@ -15,6 +16,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
