--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -11,26 +11,7 @@ spring.cloud.config.fail-fast=false
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-#
-spring.cloud.gateway.routes[0].id=user-service
-spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE
-spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
-
-spring.cloud.gateway.routes[1].id=event-service
-spring.cloud.gateway.routes[1].uri=lb://EVENT-SERVICE
-spring.cloud.gateway.routes[1].predicates[0]=Path=/events/**
-
-spring.cloud.gateway.routes[2].id=main-service-admin
-spring.cloud.gateway.routes[2].uri=lb://MAIN-SERVICE
-spring.cloud.gateway.routes[2].predicates[0]=Path=/admin/**
-
-spring.cloud.gateway.routes[3].id=main-service-categories
-spring.cloud.gateway.routes[3].uri=lb://MAIN-SERVICE
-spring.cloud.gateway.routes[3].predicates[0]=Path=/categories/**
-
-spring.cloud.gateway.routes[4].id=main-service-compilations
-spring.cloud.gateway.routes[4].uri=lb://MAIN-SERVICE
-spring.cloud.gateway.routes[4].predicates[0]=Path=/compilations/**
+spring.cloud.gateway.discovery.locator.predicates[0]=Path=/api/**
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
