--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -11,7 +11,31 @@ spring.cloud.config.fail-fast=false
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-spring.cloud.gateway.discovery.locator.predicates[0]=Path=/api/**
+#
+spring.cloud.gateway.routes[0].id=user-service-api
+spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/users/**
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[1].id=event-service-api
+spring.cloud.gateway.routes[1].uri=lb://EVENT-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/events/**
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[2].id=main-service-admin-api
+spring.cloud.gateway.routes[2].uri=lb://MAIN-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/admin/**
+spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[3].id=main-service-categories-api
+spring.cloud.gateway.routes[3].uri=lb://MAIN-SERVICE
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/categories/**
+spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[4].id=main-service-compilations-api
+spring.cloud.gateway.routes[4].uri=lb://MAIN-SERVICE
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/compilations/**
+spring.cloud.gateway.routes[4].filters[0]=StripPrefix=1
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
