--- a/core/event-service/src/main/resources/application.yaml
+++ b/core/event-service/src/main/resources/application.yaml
@@ -6,21 +6,11 @@ spring:
     name: event-service
   main:
     allow-bean-definition-overriding: true
-  
+
   # Config Server
-  config:
-    import: optional:configserver
   cloud:
     config:
       enabled: false
-    import-check:
-      enabled: false
-
-  #
-  mvc:
-    throw-exception-if-no-handler-found: true
-    pathmatch:
-      matching-strategy: ant_path_matcher
 
   # PostgreSQL Configuration
   datasource:
@@ -37,17 +27,13 @@ spring:
   # JPA Configuration
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: validate  # или none
     show-sql: true
     properties:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
         default_schema: public
-        jdbc:
-          batch_size: 20
-        order_inserts: true
-        order_updates: true
 
     generate-ddl: false
 
@@ -58,11 +44,6 @@ spring:
       schema-locations: classpath:schema.sql
       continue-on-error: false
     initialization-mode: always
-
-  # Jackson
-  jackson:
-    deserialization:
-      fail-on-unknown-properties: false
 
 # Eureka
 eureka:
@@ -80,20 +61,13 @@ management:
     web:
       exposure:
         include: health,info,metrics
-      path-mapping:
-        health: healthcheck
   endpoint:
     health:
       show-details: always
-      probes:
-        enabled: true
 
 # Logging
 logging:
   level:
     ru.practicum: DEBUG
-    org.springframework.validation: DEBUG
-    org.springframework.web: DEBUG
-    org.hibernate: WARN
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+    org.springframework.jdbc: DEBUG
+    org.springframework.orm.jpa: DEBUG
